<resources>
    <string name="app_name">Checky</string>
    <string name="reset_btn">Reset</string>
    <string name="debug_text">For debug</string>
    <string name="switch1">Turned Gas off</string>
    <string name="switch2">Turned Water off</string>
    <string name="switch3">Gave food for pets</string>
    <string name="switch4">Closed windows</string>
    <string name="switch5">Turned off the Internet</string>
    <string name="switch6_check">Are you sure?</string>
    <string name="switch6">Closed the door</string>
    <string name="authors_settings">Author: Baymukhamedov Bakhti | info@byfe.me</string>
    <string name="Settings_title">Here you can change fields</string>
    <string name="hint_field1">Text for the 1st field</string>
    <string name="Change_fields_btn">Apply changes</string>
    <string name="hint_field2">Text for the 2nd field</string>
    <string name="hint_field3">Text for the 3rd field</string>
    <string name="hint_field4">Text for the 4th field</string>
    <string name="hint_field5">Text for the 5th field</string>
    <string name="hint_field6">Text for the 6th field</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_back_text">Back</string>
    <string name="button_settings_page">Advanced</string>
    <string name="hint_field7">Text for the 7th field</string>
    <string name="hint_field8">Text for the 8th field</string>
    <string name="advanced_title">Global Settings</string>
    <string name="Advanced_SaveBtn">Advanced_SaveBtn</string>
    <string name="switch_compat7">Turned off the light</string>
    <string name="switch_compat9">Threw out the trash</string>
    <string name="title_activity_advanced">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Advanced_settings_Title">Advanced Settings</string>
    <string name="sixfields">6 fields</string>
    <string name="sevenfields">7 fields</string>
    <string name="eightfields">8 fields</string>
    <string name="AdvSaveBtn">SAVE</string>
    <string name="FieldsCountTitle">How many fields to use:</string>
    <string name="hellotexthelp">Show this text on top of main page:</string>
    <string name="hellotitlehint">Change this text</string>
    <string name="SetSwitchCompatBGonchecked">Change background color on action switches</string>
    <string name="ChangeBgswticheshelper">If On - action switches will change their background color when Switched On</string>
</resources>
