<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/debugadvanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/FieldsCountTitle"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="386dp"
                android:layout_height="112dp"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/sixfields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sixfields"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/sevenfields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sevenfields"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/eightfields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eightfields"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hellotexthelp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/hellotitletext"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hellotitlehint"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ChangeBgswticheshelper"
                android:visibility="gone"
                tools:visibility="gone" />

            <Switch
                android:id="@+id/bgswitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SetSwitchCompatBGonchecked"
                android:visibility="gone"
                tools:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="136dp">

                <Button
                    android:id="@+id/submit_advanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F6DD00"
                    android:onClick="SaveDataAdvanced"
                    android:text="@string/Change_fields_btn"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.929"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.818" />

                <Button
                    android:id="@+id/btBackadvanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:text="@string/btn_back_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.058"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.818" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="392dp"
        android:layout_height="32dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="10dp"
        android:text="@string/Advanced_settings_Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>