<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    android:scrollbarSize="4dp"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".Activity_settings">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-23dp"
        tools:layout_editor_absoluteY="41dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputField0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_field1"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputField1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_field2"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputField2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field3"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputField3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field4"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputField4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field5"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputField5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field6"
                android:inputType="text" />

            <EditText
                android:id="@+id/inputField6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field7"
                android:inputType="text"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/inputField7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_field8"
                android:inputType="text"
                android:visibility="invisible"
                tools:layout_editor_absoluteX="-26dp"
                tools:layout_editor_absoluteY="544dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="277dp">

                <Button
                    android:id="@+id/submit_fc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="360dp"
                    android:background="#F6DD00"
                    android:onClick="SaveData"
                    android:text="@string/Change_fields_btn"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    tools:layout_editor_absoluteX="16dp" />

                <Button
                    android:id="@+id/btAdvanced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_settings_page"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.72" />

                <Button
                    android:id="@+id/bt_back"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:text="@string/btn_back_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.698" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authors_settings"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/submit_fc"
                    app:layout_constraintVertical_bias="0.759" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/telegram_messenger"
                    android:onClick="tglink"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/settingsdebug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="invisible"
                tools:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/Settings_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

</androidx.constraintlayout.widget.ConstraintLayout>